--- a/index.html
+++ b/index.html
@@ -7,23 +7,15 @@
   </head>
   <body>
     <div>
-      <img src="http://placekitten.com/g/200/300" crossOrigin="anonymous" data-blurit data-blurit-transform='replace'>
+      <img src="demo/images/300.jpg" data-blurit data-blurit-transform='replace'>
     </div>
     <div class='img-wrapper'>
-      <img src="http://placekitten.com/g/200/400" crossOrigin="anonymous" data-blurit data-blurit-transform='append'>
+      <img src="demo/images/400.jpg" data-blurit data-blurit-transform='append'>
     </div>
     <div class='img-wrapper'>
-      <img src="http://placekitten.com/g/200/500" crossOrigin="anonymous" data-blurit data-blurit-transform='append'>
+      <img src="demo/images/700.jpg" data-blurit data-blurit-transform='append'>
     </div>
-    <div class='img-wrapper'>
-      <img src="http://placekitten.com/g/100/300" crossOrigin="anonymous" data-blurit data-blurit-transform='append'>
-    </div><div class='img-wrapper'>
-      <img src="http://placekitten.com/g/300/300" crossOrigin="anonymous" data-blurit data-blurit-transform='append'>
-    </div>
-    <div class='img-wrapper'>
-      <img src="http://placekitten.com/g/700/300" crossOrigin="anonymous" data-blurit data-blurit-transform='append'>
-    </div>
-
-    <script src="build/BlurIt.js"></script>
+    <script async src="build/BlurIt.js"></script>
+    <!--<script async src='https://rawgithub.com/gagoar/BlurIt/master/dist/BlurIt.min.js'></script>-->
   </body>
 </html>
