--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta http-equiv='Content-type' content='text/html; charset=utf-8'>
     <title>BlurIt!</title>
-    <link rel="stylesheet" href="demo/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div>
-      <img src="demo/images/300.jpg" data-blurit data-blurit-transform='replace'>
+      <img src="images/300.jpg" data-blurit data-blurit-transform='replace'>
     </div>
     <div class='img-wrapper'>
-      <img src="demo/images/400.jpg" data-blurit data-blurit-transform='append'>
+      <img src="images/400.jpg" data-blurit data-blurit-transform='append'>
     </div>
     <div class='img-wrapper'>
-      <img src="demo/images/700.jpg" data-blurit data-blurit-transform='append'>
+      <img src="images/700.jpg" data-blurit data-blurit-transform='append'>
     </div>
     <script async src='https://rawgithub.com/gagoar/BlurIt/master/dist/BlurIt.min.js'></script>
   </body>
